tests/errors/preprocessor/021_branch.c.expect
./tests/errors/preprocessor/021_branch.c:1:3: error: unterminated #if
1 | #if 1
      ^
2 | int a = 0; #endif
